--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "com.coffee.softmask-for-ugui": "1.0.2",
+    "com.cyanilux.urp-blitrenderfeature": "https://github.com/Cyanilux/URP_BlitRenderFeature.git",
     "com.cysharp.unitask": "2.5.3",
     "com.github-glitchenzo.nugetforunity": "3.1.3",
     "com.marijnzwemmer.unity-toolbar-extender": "1.4.2",
